--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>sieni.git.io</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Mielipuolista paskaa</title>
+<style>
+  * { margin: 0; padding: 0; overflow: hidden; }
+  body, html, #container {
+    background: #000;
+    width: 100wv;
+    height: 100vh;
+  }
+</style>
 </head>
 <body>
-<h1>Sieni</h1>
+<div id="container"></div>
+<script>
+function getQueryVariable(variable) {
+  var query = window.location.search.substring(1);
+  var vars = query.split("&");
+  for (var i=0;i<vars.length;i++) {
+    var pair = vars[i].split("=");
+    if(pair[0] == variable){return pair[1];}
+  }
+  return(false);
+}
+window.RufflePlayer = window.RufflePlayer || {};
+window.addEventListener("load", (event) => {
+    const ruffle = window.RufflePlayer.newest();
+    const player = ruffle.createPlayer();
+    const container = document.getElementById("container");
+    container.appendChild(player);
+    if(getQueryVariable("id"))
+      player.load(getQueryVariable("id")+".swf");
+});
+</script>
+<script src="ruffle.js"></script>
 </body>
 </html>
