--- a/index.html
+++ b/index.html
@@ -3,18 +3,37 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Mielipuolista paskaa</title>
+<title>sieni.tup.su - mielipuolista paskaa</title>
 <style>
   * { margin: 0; padding: 0; overflow: hidden; }
-  body, html, #container {
+  body, html {
     background: #000;
-    width: 100wv;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 0.9em;
+  }
+  a {
+    color: #f00;
+    text-decoration: none;
+  }
+  #container {
+    width: 100%;
+    height: 98%;
+  }
+  ruffle-player {
+    width: 100%;
+    height: 100%;
+  }
+  #navi {
+    text-align: center;
   }
 </style>
 </head>
 <body>
 <div id="container"></div>
+<div id="navi"><a href="#" id="prev">&laquo; Previous</a> | <a href="/">Random</a> | <a href="#" id="next">Next &raquo;</a></div>
 <script>
 function getQueryVariable(variable) {
   var query = window.location.search.substring(1);
@@ -23,17 +42,29 @@ function getQueryVariable(variable) {
     var pair = vars[i].split("=");
     if(pair[0] == variable){return pair[1];}
   }
-  return(false);
+  return 0;
 }
 window.RufflePlayer = window.RufflePlayer || {};
+window.RufflePlayer.config = {
+  "autoplay": "auto",
+  "letterbox": "on",
+  "warnOnUnsupportedContent": false
+};
 window.addEventListener("load", (event) => {
-    const ruffle = window.RufflePlayer.newest();
-    const player = ruffle.createPlayer();
-    const container = document.getElementById("container");
-    container.appendChild(player);
-    var id = getQueryVariable("id");
-    if(!id) id = Math.floor(Math.random() * Math.floor(69)) + 1;
-    player.load(getQueryVariable("id")+".swf");
+  const ruffle = window.RufflePlayer.newest();
+  const player = ruffle.createPlayer();
+  const container = document.getElementById("container");
+  container.appendChild(player);
+  var id = getQueryVariable("id");
+  if(!id) id = Math.floor(Math.random() * Math.floor(69)) + 1;
+  if(id < 10) id = "0"+id;
+  player.load(id+".swf");
+  var path = "/?id="+(1*id);
+  var next = "/?id="+(1*id+1);
+  var prev = "/?id="+(1*id-1);
+  history.pushState("https://sieni.tup.su"+path, "sieni.tup.su - mielipuolista paskaa", path);
+  document.getElementById("next").href = next;
+  document.getElementById("prev").href = prev;
 });
 </script>
 <script src="ruffle.js"></script>
